# meteo

./: .gitignore  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.browser  README.tmpl  SETUP  TODO  UPGRADE  aclocal.m4  average.c  average.h  com.c  com.h  config.h.in  configure  configure.in  configureit  conversions.c  conversions.h  crc.c  daemon.c  daemon.h  database.c  database.h  davis.c  davis.h  dbupdate.c  dbupdate.h  dewpoint.c  dewpoint.h  dloop.c  dloop.h  dograph.c  dograph.h  (+49 more)
browser/: Makefile.am  Makefile.in  README.browser  current.cgi  current.php  current.xsl  dummygettext.inc  meteobrowser.inc  meteobrowser.php
browser/po/: Makefile.am  Makefile.in  README  de.po  en.po  meteobrowser.pot  pt_BR.po
conf/: Makefile.am  Makefile.in  README  meteo-60.xml  meteo.conf  meteo.dtd  meteo.xml
db/: Makefile.am  Makefile.in  README  meteo.sql
doc/: Makefile.am  Makefile.in  Techref.txt  architecture  graphing  sensors  uds10  vtechref.txt
gallery/: Altendorf.xml  Arrowwood.xml  ChinoHills.xml  Gurin.xml  Lajeado.xml  Makefile.am  Makefile.in  MartinLutherCollege.xml  NFO.xml  Terassa.xml  meteo.guenthers.net.xml
html/: Makefile.am  Makefile.in  about.html  about.xml  ack.html  ack.xml  buildgallery.sh  config.html  config.xml  gallery.html  gallery.xml  gallery.xml.in  gallery.xsl  gallery_template.xml  get.html  get.html.in  index.html  inhalt.html  install.html  install.xml.in  meteo-install.html  meteo.css  meteo.html.in  meteo.xsl  meteodata.html  news.html  news.html.in  news.xml.in  prereq.html  prereq.xml  requ.html  support.html  support.xml  uti.html  util.html  util.xml
include/: Averager.h  Axis.h  BarometerReader.h  BasicConverter.h  BasicPacketReader.h  BasicQueryResult.h  BasicRecorder.h  BasicValue.h  BasicValueFactory.h  BytePacketReader.h  Calibrator.h  Channel.h  ChannelFactory.h  ChunkDumper.h  Color.h  Configuration.h  Converter.h  ConverterFactory.h  Daemon.h  DataRecorder.h  Datarecord.h  Dataset.h  Datasink.h  DavisStation.h  Derivedvalue.h  Dewpoint.h  Dimension.h  Energy.h  ExtraTemperatureReader.h  FQField.h  FQField_internals.h  Field.h  Field_internals.h  FileChannel.h  Format.h  Frame.h  GraphPoint.h  GraphWindow.h  Graphics.h  GroWeather.h  (+140 more)
lib/: Averager.cc  Axis.cc  BarometerReader.cc  BasicConverter.cc  BasicPacketReader.cc  BasicRecorder.cc  BasicValue.cc  BasicValueFactory.cc  BytePacketReader.cc  Calibrator.cc  Channel.cc  ChannelFactory.cc  ChunkDumper.cc  Color.cc  Configuration.cc  Converter.cc  ConverterFactory.cc  Daemon.cc  DataRecorder.cc  Datarecord.cc  Dataset.cc  Datasink.cc  DavisStation.cc  Derivedvalue.cc  Dewpoint.cc  Dimension.cc  Energy.cc  ExtraTemperatureReader.cc  FQField.cc  FQField_internals.cc  Field.cc  Field_internals.cc  FileChannel.cc  Format.cc  Frame.cc  GraphPoint.cc  GraphWindow.cc  Graphics.cc  GroWeather.cc  Health.cc  (+142 more)
man/: Makefile.am  Makefile.in  meteo.1.in  meteo.conf.5  meteo.sql.5  meteo.xml.5  meteoavg.1  meteodbdump.1  meteodequeue.1  meteodraw.1  meteograph.1  meteolabel.1  meteolast.1  meteoloop.1  meteomap.1  meteopoll.1  meteosensors.1  meteosunriset.1
src/: Makefile.am  Makefile.in  meteoavg.c  meteoavg.cc  meteocheck.c  meteodbdump.cc  meteodequeue.c  meteodequeue.cc  meteodraw.cc  meteograph.c  meteograph.cc  meteolabel.cc  meteolast.c  meteolast.cc  meteoloop.c  meteomap.cc  meteopoll.cc  meteosensors.cc  meteosunriset.cc  meteotest.c  meteoupdate.c  meteoupdate.cc  meteowatch.c  meteowatch.cc
support/: How_to_migrate  How_to_migrate2  Makefile.am  Makefile.in  README  StartupParameters.plist  meteo  meteodbmigrate  meteodbmigrate.cc  meteofixtimestamps.c  meteojob  meteooverview  rc.meteo
wunderground/: BUGS  INSTALL  Makefile.am  Makefile.in  README  do-wu-update.sh  meteo-wu-fmt.pl  wu-update.cron  wu-upload.pl
