#
# Makefile.am -- generate a portable Makefile for the meteo interface package
#
# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
#
# $Id: Makefile.am,v 1.5 2004/05/08 20:09:32 afm Exp $
#
EXTRA_DIST = Altendorf.xml Gurin.xml meteo.guenthers.net.xml NFO.xml	\
	Arrowwood.xml ChinoHills.xml MartinLutherCollege.xml \
	Terassa.xml Lajeado.xml


