#
# Makefile.am -- generate a portable Makefile for the meteo interface package
#
# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
#
# $Id: Makefile.am,v 1.15 2003/06/12 20:29:33 afm Exp $
#

noinst_HEADERS =							\
	MeteoException.h MeteoValue.h Vector.h Wind.h Rain.h		\
	Channel.h Timeval.h Station.h Configuration.h			\
	Datasink.h Pidfile.h Converter.h				\
	Frame.h								\
	crc.h meteo.h 							\
	graph.h dewpoint.h msgque.h					\
	meteograph.h xmlconf.h						\
	average.h database.h timestamp.h dograph.h daemon.h 		\
	printver.h mdebug.h pdebug.h colors.h

