#
# Makefile.am -- generate a portable Makefile for the meteo interface package
#
# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
#
# $Id: Makefile.am,v 1.11 2006/05/07 19:47:22 afm Exp $
#
man_MANS = meteo.1 meteoavg.1 meteopoll.1 meteodequeue.1 meteodraw.1	\
	meteo.xml.5 meteo.sql.5 meteolabel.1 meteodbdump.1 meteolast.1	\
	meteosensors.1 meteosunriset.1 meteomap.1

EXTRA_DIST = 								\
	meteo.1.in meteoavg.1 meteopoll.1 meteodequeue.1 meteodraw.1	\
	meteo.xml.5 meteo.sql.5  meteolabel.1 meteodbdump.1 meteolast.1	\
	meteosensors.1 meteosunriset.1 meteomap.1

